Fix smooth scroll on safari

--- a/css/main.css
+++ b/css/main.css
@@ -446,11 +446,16 @@ html {
 .c-footer {
   background-color: transparent;
   text-align: center;
-  -webkit-transform: translateY(35px);
-          transform: translateY(35px);
+  -webkit-transform: translateY(25px);
+          transform: translateY(25px);
   border-top: 1px solid rgba(0, 0, 0, 0.2);
-  padding-top: 10px;
+  padding-top: 15px;
+}
+
+.c-footer__text {
+  text-decoration: none;
   font-size: 12px;
+  color: #4f4f4f;
 }
 
 .l-stack {
