--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,8 +1,13 @@
 .c-footer {
     background-color: transparent;
     text-align: center;
-    transform: translateY(35px);
+    transform: translateY(25px);
     border-top: 1px solid rgba(0, 0, 0, 0.2);
-    padding-top: 10px;
-    font-size: 12px;
+    padding-top: 15px;
+
+    &__text {
+        text-decoration: none;
+        font-size: 12px;
+        color: $c-secondary;
+    }
 }
